--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,127 +1,162 @@
 # Default application configuration that all configurations inherit from.
 linters:
-	BorderZero:
-		enabled: true
+  # Prefer `border: 0` instead of `border: none`.
+  BorderZero:
+    enabled: true
 
-	CapitalizationInSelector:
-		enabled: true
+  # IDs, classes, types, placeholders, and pseudo-selectors should be all lowercase.
+  CapitalizationInSelector:
+    enabled: true
 
-	ColorKeyword:
-		enabled: true
+  # Prefer hexadecimal color codes over color keywords.
+  ColorKeyword:
+    enabled: true
 
-	Comment:
-		enabled: true
+  # Enable comments with `//` and `/* ... */`.
+  Comment:
+    enabled: false
 
-	DebugStatement:
-		enabled: true
+  # Reports @debug statements (which you probably left behind accidentally).
+  DebugStatement:
+    enabled: true
 
-	DeclarationOrder:
-		enabled: true
+  # Write @extend statements first in rule sets, followed by property declarations and then other nested rule sets.
+  DeclarationOrder:
+    enabled: true
 
-	DuplicateProperty:
-		enabled: true
+  # Reports when you define the same property twice in a single rule set.
+  DuplicateProperty:
+    enabled: true
 
-	ElsePlacement:
-		enabled: true
-		style: same_line # or 'new_line'
+  # Place @else statements on the same line as the preceding curly brace.
+  ElsePlacement:
+    enabled: true
+    style: same_line
 
-	EmptyLineBetweenBlocks:
-		enabled: true
-		ignore_single_line_blocks: true
+  # Separate rule, function, and mixin declarations with empty lines.
+  EmptyLineBetweenBlocks:
+    enabled: true
+    ignore_single_line_blocks: true
 
-	EmptyRule:
-		enabled: true
+  # Reports when you have an empty rule set.
+  EmptyRule:
+    enabled: true
 
-	FinalNewline:
-		enabled: true
-		present: true
+  # Enforce newline at EOF.
+  FinalNewline:
+    enabled: true
+    present: true
 
-	HexLength:
-		enabled: true
-		style: short # or 'long'
+  # No need to use shorthand hexadecimal syntax only (although it's prefered).
+  HexLength:
+    enabled: false
 
-	HexNotation:
-		enabled: true
-		style: lowercase # or 'uppercase'
-	
-	HexValidation:
-		enabled: true
+  # Checks if hexadecimal colors are written in lowercase.
+  HexNotation:
+    enabled: true
+    style: lowercase
 
-	IdWithExtraneousSelector:
-		enabled: true
+  # Ensure hexadecimal colors are valid.
+  HexValidation:
+    enabled: true
 
-	Indentation:
-		enabled: true
-		width: 4
+  # Don't combine additional selectors with an ID selector.
+  IdWithExtraneousSelector:
+    enabled: true
 
-	LeadingZero:
-		enabled: true
-		style: exclude_zero # or 'include_zero'
+  # Use two spaces per indentation level.
+  Indentation:
+    enabled: true
+    width: 2
 
-	MergeableSelector:
-		enabled: true
-		force_nesting: true
+  # Don't write leading zeros for numeric values with a decimal point.
+  LeadingZero:
+    enabled: true
+    style: exclude_zero
 
-	NameFormat:
-		enabled: true
-		convention: hyphenated_lowercase # or 'BEM', or a regex pattern
-	
-	PlaceholderInExtend:
-		enabled: true
+  # Reports when you define the same selector twice in a single sheet.
+  MergeableSelector:
+    enabled: true
+    force_nesting: false
 
-	PropertySortOrder:
-		enabled: false
+  # Allow us to use underscore when naming things (useful because of SMACSS/BEM notation).
+  NameFormat:
+    enabled: false
 
-	PropertySpelling:
-		enabled: true
-		extra_properties: []
+  # Allow us to use classes and placeholders with `@extend`.
+  PlaceholderInExtend:
+    enabled: false
 
-	SelectorDepth:
-		enabled: true
-		max_depth: 3
+  # Sorting property names in alphabetical order is bullshit.
+  PropertySortOrder:
+    enabled: false
 
-	Shorthand:
-		enabled: true
+  # Reports when you use an unknown CSS property (doesn't care about vendor prefixes).
+  PropertySpelling:
+    enabled: true
+    extra_properties: []
 
-	SingleLinePerSelector:
-		enabled: true
+  # Don't write selectors with a depth of applicability greater than 3.
+  SelectorDepth:
+    enabled: true
+    max_depth: 3
 
-	SpaceAfterComma:
-		enabled: true
+  # Prefer the shortest shorthand form possible for properties that support it.
+  Shorthand:
+    enabled: true
 
-	SpaceAfterPropertyColon:
-		enabled: true
-		style: one_space # or 'no_space', or 'at_least_one_space', or 'aligned'
+  # Properties within rule sets should each reside on their own line.
+  SingleLinePerSelector:
+    enabled: true
 
-	SpaceAfterPropertyName:
-		enabled: true
+  # Commas in lists should be followed by a space.
+  SpaceAfterComma:
+    enabled: true
 
-	SpaceBeforeBrace:
-		enabled: true
-		allow_single_line_padding: false
+  # Properties should be formatted with a single space separating the colon from the property's value.
+  SpaceAfterPropertyColon:
+    enabled: true
+    style: one_space
 
-	SpaceBetweenParens:
-		enabled: true
-		spaces: 0
+  # Properties should be formatted with no space between the name and the colon.
+  SpaceAfterPropertyName:
+    enabled: true
 
-	StringQuotes:
-		enabled: true
-		style: single_quotes # or double_quotes
+  # Opening braces should be preceded by a single space.
+  SpaceBeforeBrace:
+    enabled: true
+    allow_single_line_padding: false
 
-	TrailingSemicolonAfterPropertyValue:
-		enabled: true
+  # Parentheses should not be padded with spaces.
+  SpaceBetweenParens:
+    enabled: true
+    spaces: 0
 
-	UnnecessaryMantissa:
-		enabled: true
+  # Enforce double quotes.
+  StringQuotes:
+    enabled: true
+    style: double_quotes
 
-	UrlFormat:
-		enabled: true
+  # Property values, @extend directives, @include directives, and variable declarations should always end with a semicolon.
+  TrailingSemicolon:
+    enabled: true
 
-	UrlQuotes:
-		enabled: true
+  # Numeric values should not contain unnecessary fractional portions.
+  UnnecessaryMantissa:
+    enabled: true
 
-	ZeroUnit:
-		enabled: true
+  # Enable us to use relative and absolute paths for URL values.
+  UrlFormat:
+    enabled: false
 
-	Compass::*:
-		enabled: false
+  # URLs should always be enclosed within quotes.
+  UrlQuotes:
+    enabled: true
+
+  # Omit length units on zero values.
+  ZeroUnit:
+    enabled: true
+
+  # Don't care about Compass.
+  Compass::*:
+    enabled: false
